--- a/app/assets/stylesheets/bootstrap.css.erb
+++ b/app/assets/stylesheets/bootstrap.css.erb
@@ -137,11 +137,12 @@ body {
   background-color: #EEE;
 }
 a {
-	color:#000000;
+	color:#000;
   text-decoration: none;
 }
 a:hover {
   color: #808080;
+   text-decoration: underline;
 }
 .row {
   margin-left: -20px;
