--- a/app/views/shared/_argument_contre_badge.html.erb
+++ b/app/views/shared/_argument_contre_badge.html.erb
@@ -53,7 +53,7 @@
 						<div class="row" id="coco">
 	                 		<div class="toggle">
 							  <div id="argcontent">
-								<%= h(argument.content).gsub(/\n/, '<br/>').html_safe %>
+								<%= h Rinku.auto_link(argument.content).gsub(/\n/, '<br/>').html_safe %>
 							  </div>							
 	                 		</div>
 						</div>
