--- a/app/views/static_pages/cgu.html.erb
+++ b/app/views/static_pages/cgu.html.erb
@@ -1,25 +1,8 @@
-TEST JAVA
 
-<div id="container">
-	<div class="item">
-		<h3 class="toggleOpen">Open Me!</h3>
-		<div class="toggle">
-			<span class="toggleClose">x</span>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi condimentum ligula vitae nisl.</p>
-		</div>
-	</div>
-	<div class="item">
-		<h3 class="toggleOpen">Open Me!</h3>
-		<div class="toggle">
-			<span class="toggleClose">x</span>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi condimentum ligula vitae nisl vehicula elementum. Quisque d.</p>
-		</div>
-	</div>	<div class="item">
-			<h3 class="toggleOpen">Open Me!</h3>
-			<div class="toggle">
-				<span class="toggleClose">x</span>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi condimentum ligula vitae nisl vehicul</p>
-			</div>
-		</div>
+<div id="emotion">
+    <input type="radio" name="emotion" id="sad" />
+        <label for="sad"><%=image_tag("cat-monde.png", :alt => 'Moutoners')%></label>
+
+    <input type="radio" name="emotion" id="happy" />
+        <label for="happy"><%=image_tag("cat-sports.png", :alt => 'Moutoners')%></label>
 </div>
-
