--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -104,8 +104,9 @@
 		<div id="catcatcat"><%= render "shared/menu_cat"%></div>
 	
 		<div id="best-debates3">	
-			
     	    	<%= render "shared/challenge_badge", :challenge => @challenge%>
+				<%= render "shared/challenge_badge", :debate => @debate%>
+				<%= render "shared/doulin_badge", :doulin => @doulin%>
 		</div>
 	</div>
 		
